--- a/sports_cars/Bentley/index.html
+++ b/sports_cars/Bentley/index.html
@@ -126,6 +126,7 @@
                                 </li>
                                 <li><a href="../about.html">About</a></li>
                                 <li><a href="../../contact.html">Contact</a></li>
+                                <li><a href="../../faqs.html">faq's</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -185,11 +186,11 @@
       
         <div class="row text-center text-lg-left">
             <div class="col-lg-3 col-md-4 col-6">
-              <a class="venobox gallery" data-gall="myGallery" href=""><img class="gallery" src="../../assets/images/cars/BENTLEY/BENTLEY BENTYAGA/1.jpg" alt="alt image"></a>
+              <a href="bentyaga.html"><img class="gallery" src="../../assets/images/cars/BENTLEY/BENTLEY BENTYAGA/1.jpg" alt="alt image"></a>
               <span><a href="bentyaga.html"><label class="col-lg-12 btn-1">BENTLEY BENTYAGA</a></label></span>     
             </div>
             <div class="col-lg-3 col-md-4 col-6">
-              <a class="venobox gallery" data-gall="myGallery" href=""><img class="gallery" src="../../assets/images/cars/BENTLEY/FLYING SPUR/1.jpg" alt="alt image"></a>
+              <a href="spur.html"><img class="gallery" src="../../assets/images/cars/BENTLEY/FLYING SPUR/1.jpg" alt="alt image"></a>
               <span><a href="spur.html"><label class="col-lg-12 btn-1">BENTLEY SPUR<label></a></label></span>      
             </div>
 
