--- a/sports_cars/Mercedes/index.html
+++ b/sports_cars/Mercedes/index.html
@@ -126,6 +126,7 @@
                                 </li>
                                 <li><a href="../about.html">About</a></li>
                                 <li><a href="../../contact.html">Contact</a></li>
+                                <li><a href="../../faqs.html">faq's</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -185,15 +186,15 @@
       
         <div class="row text-center text-lg-left">
             <div class="col-lg-3 col-md-4 col-6">
-              <a class="venobox gallery" data-gall="myGallery" href=""><img class="gallery" src="../../assets/images/cars/MERCEDES/MERCEDES CLS/21.jpg" alt="alt image"></a>
+              <a href="cls.html"><img class="gallery" src="../../assets/images/cars/MERCEDES/MERCEDES CLS/21.jpg" alt="alt image"></a>
               <span><a href="cls.html"><label class="col-lg-12 btn-1">MERCEDES CLS</a></label></span>     
             </div>
             <div class="col-lg-3 col-md-4 col-6">
-              <a class="venobox gallery" data-gall="myGallery" href=""><img class="gallery" src="../../assets/images/cars/MERCEDES/MERCEDES E CLASS/1'.jpg" alt="alt image"></a>
+              <a href="eclass.html"><img class="gallery" src="../../assets/images/cars/MERCEDES/MERCEDES E CLASS/1'.jpg" alt="alt image"></a>
               <span><a href="eclass.html"><label class="col-lg-12 btn-1">MERCEDES E CLASS<label></a></label></span>      
             </div>
             <div class="col-lg-3 col-md-4 col-6">
-                <a class="venobox gallery" data-gall="myGallery" href=""><img class="gallery" src="../../assets/images/cars/MERCEDES/MERCEDES S CLASS/5.jpg" alt="alt image"></a>
+                <a href="sclass.html"><img class="gallery" src="../../assets/images/cars/MERCEDES/MERCEDES S CLASS/5.jpg" alt="alt image"></a>
                 <span><a href="sclass.html"><label class="col-lg-12 btn-1">MERCEDES S CLASS<label></a></label></span>      
               </div>
 
