--- a/sports_cars/Rolls_Royce/index.html
+++ b/sports_cars/Rolls_Royce/index.html
@@ -126,6 +126,7 @@
                                 </li>
                                 <li><a href="../../about.html">About</a></li>
                                 <li><a href="../../contact.html">Contact</a></li>
+                                <li><a href="../../faqs.html">faq's</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -186,15 +187,15 @@
       
           
           <div class="col-lg-3 col-md-4 col-6">
-            <a><img class="gallery" src="../../assets/images/cars/ROLLS ROYCE/GHOST/1.jpg" alt="alt image"></a>
+            <a href="ghost.html"><img class="gallery" src="../../assets/images/cars/ROLLS ROYCE/GHOST/1.jpg" alt="alt image"></a>
             <span><a href="ghost.html"><label class="col-lg-12 btn-1">ROLLS ROYCE GHOST</label></a></span>        
           </div>
           <div class="col-lg-3 col-md-4 col-6">
-            <a><img class="gallery" src="../../assets/images/cars/ROLLS ROYCE/PHANTOM/1.jpg" alt="alt image"></a>
+            <a href="phantom.html"><img class="gallery" src="../../assets/images/cars/ROLLS ROYCE/PHANTOM/1.jpg" alt="alt image"></a>
             <span><a href="phantom.html"><label class="col-lg-12 btn-1">ROLLS ROYCE PHANTOMT</label></a></span>        
           </div>
           <div class="col-lg-3 col-md-4 col-6">
-            <a><img class="gallery" src="../../assets/images/cars/ROLLS ROYCE/GHOST/1.jpg" alt="alt image"></a>
+            <a href="wrath.html"><img class="gallery" src="../../assets/images/cars/ROLLS ROYCE/GHOST/1.jpg" alt="alt image"></a>
             <span><a href="wrath.html"><label class="col-lg-12 btn-1">ROLLS ROYCE WRATH</label></a></span>        
           </div>
         </div>
