--- a/sports_cars/AUDI/index.html
+++ b/sports_cars/AUDI/index.html
@@ -126,6 +126,7 @@
                                 </li>
                                 <li><a href="../../about.html">About</a></li>
                                 <li><a href="../../contact.html">Contact</a></li>
+                                <li><a href="../../faqs.html">faq's</a></li>
                             </ul>
                         </nav>
                     </div>
