--- a/sports_cars/aston_martin/rapide.html
+++ b/sports_cars/aston_martin/rapide.html
@@ -124,6 +124,7 @@
                                 </li>
                                 <li><a href="../about.html">About</a></li>
                                 <li><a href="../../contact.html">Contact</a></li>
+                                <li><a href="../../faqs.html">faq's</a></li>
                             </ul>
                         </nav>
                     </div>
